core/stdlib/tests/ui/root_invalid_unit_struct.rs
use stdlib::Root;

#[derive(Root)]
struct Unit;
